--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
     "axios": "^1.7.7",
+    "framer-motion": "^11.11.1",
     "next": "^14.2.8",
     "react": "^18",
     "react-dom": "^18",
