--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
+    "@tanstack/react-query": "^5.59.0",
     "axios": "^1.7.7",
     "framer-motion": "^11.11.1",
     "next": "^14.2.8",
     "react": "^18",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18",
     "react-naver-maps": "^0.1.3",
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
+    "@tanstack/react-query-devtools": "^5.59.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.8",
     "postcss": "^8",
