--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "cors": "^2.8.5",
     "framer-motion": "^11.11.1",
     "js-cookie": "^3.0.5",
+    "lottie-web": "^5.12.2",
     "next": "^14.2.8",
     "react": "^18",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
+    "react-lottie": "^1.2.4",
     "react-naver-maps": "^0.1.3",
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.26.2",
