장소 디테일 시각화

--- a/.env.production
+++ b/.env.production
@@ -2,4 +2,5 @@ NEXT_PUBLIC_NAVER_ID=7uxjbr1ezw
 NEXT_PUBLIC_BASE_URL=http://ingress-ngi-ingress-ngin-16d3b-100186920-4cd64223bbc6.kr.lb.naverncp.com/spring
 # NEXT_PUBLIC_BASE_URL=http://localhost:8080
 NEXT_PUBLIC_MODE=production
-NEXT_PUBLIC_AI_URL=
+NEXT_PUBLIC_AI_URL=http://ingress-ngi-ingress-ngin-16d3b-100186920-4cd64223bbc6.kr.lb.naverncp.com/recommend
+NEXT_PUBLIC_SECOND_AI_URL=http://ingress-ngi-ingress-ngin-16d3b-100186920-4cd64223bbc6.kr.lb.naverncp.com/dbupdate
