--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
     "@tanstack/react-query": "^5.59.0",
+    "apexcharts": "^4.0.0",
     "axios": "^1.7.7",
     "cors": "^2.8.5",
     "framer-motion": "^11.11.1",
@@ -23,12 +24,15 @@
     "lottie-web": "^5.12.2",
     "next": "^14.2.8",
     "react": "^18",
+    "react-apexcharts": "^1.5.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-lottie": "^1.2.4",
     "react-naver-maps": "^0.1.3",
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.26.2",
+    "react-vis": "^1.12.1",
+    "recharts": "^2.13.1",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
